--- a/hackaton-ctis/src/app/modules/pessoa/components/pessoa-pesquisa/pessoa-pesquisa.component.html
+++ b/hackaton-ctis/src/app/modules/pessoa/components/pessoa-pesquisa/pessoa-pesquisa.component.html
@@ -6,7 +6,7 @@
       <input type="search" class="form-control" placeholder="Pesquisar Pessoa(s)">
     </div>
     <div class="col-sm-4">
-      <button type="submit" class="btn btn-light">Procurar</button>
+      <button type="submit" class="btn btn-light" (click)="listaDePessoas()">Procurar</button>
       <button type="submit" routerLink="cadastrar" class="btn btn-info ml-2">Cadastrar</button>
     </div>
 
@@ -18,15 +18,15 @@
         <div class="card-header">
           <div class="row">
             <div class="col-6">
-              <strong>Nome: </strong> {{pessoa.nome}},
-              <strong>ID: </strong> {{pessoa.id}}
+              <strong>ID: </strong> {{pessoa.id}} |
+              <strong>Nome: </strong> {{pessoa.nome}}
 
             </div>
 
             <div class="col-6" align="right">
               <button type="button" routerLink="visualizar/{{pessoa.id}}" class="btn btn-info btn-sm">Visualizar</button>
               <button type="button" routerLink="editar/{{pessoa.id}}" class="btn btn-dark ml-2 btn-sm">Editar</button>
-              <button type="button" routerLink="id" class="btn btn-danger ml-2 btn-sm">Excluir</button>
+              <button type="button" routerLink="id" class="btn btn-danger ml-2 btn-sm" >Excluir</button>
               
             </div>
 
